Updated hero background
SVG has a small file size, but is slow to calculate

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -38,6 +38,7 @@ main {
 }
 
 .bg-hero {
-	background-image: url(../images/common/hero-bg.svg);
+	background-image: url(../images/common/hero-bg.jpg);
 	background-size: cover;
+	background-position: center;
 }
